[package]
name = "haneru"
version = "0.0.0"
authors = ["hatoo <hato2000@gmail.com>"]
edition = "2018"
description = "For take the name"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rio = "0.9.4"
libc = "0.2.93"
fs2 = "0.4.3"
async-rwlock = "1.3.0"
thiserror = "1.0"
flume = "0.10.4"
zerocopy = "0.5.0"
byteorder = "1.4.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
async-recursion = "0.3"

[dev-dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tempfile = "3.1"
rand = "0.8.3"
criterion = { version="0.3", features = ["async_tokio"] }

[[bench]]
name = "page_pool_bench"
harness = false

[[bench]]
name = "slotted_page_bench"
harness = false
